# WakaFlockaFlow

./: .dockerignore  .gitignore  Dockerfile  NOTICE.md  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  cli.py  clustering_api.py  db.py  differential_api.py  jobs.py  main.py  models.py  models_cluster.py  models_diff.py  requirements.txt  schemas.py  unmix_api.py
backend/analysis/: __init__.py  annotate.py  cluster.py  cohort.py  cohort_matrix.py  cytonorm.py  differential.py  embed.py  emd.py  flowjo.py  gatepaths.py  io.py  r_engine.py  state_axes.py  synth.py  unmix.py
backend/docker/: Dockerfile.r  Dockerfile.unmix
backend/r_scripts/: run_cytonorm.R  run_diffcyt.R  run_unmix.R
docs/: DATASET_COMPARISON.md  ENGINEERING_PLAN.md  VALIDATION.md  WakaFlakaFlow_PRD_v2.md  gating_automation_landscape.md  spectral_gating_proposal.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BiaxialPlot.jsx  BreakdownTable.jsx  CohortBuilder.jsx  Controls.jsx  DifferentialPanel.jsx  DifferentialTable.jsx  DsMarkerTable.jsx  EmdChart.jsx  GatePathViewer.jsx  PopulationTable.jsx  ProgressBar.jsx  SampleHighlightSelector.jsx  SyntheticBanner.jsx  UmapPair.jsx  UmapScatter.jsx  UnmixPanel.jsx  VolcanoPlot.jsx
sample_data/differential_demo/: README.md  SYN_ctrl_1.fcs  SYN_ctrl_2.fcs  SYN_ctrl_3.fcs  SYN_ctrl_4.fcs  SYN_treat_1.fcs  SYN_treat_2.fcs  SYN_treat_3.fcs  SYN_treat_4.fcs
sample_data/spectral_pbmc/: PBMC_spectral_MIXED_raw.fcs  PBMC_spectral_UNMIXED.fcs  README.md
sample_data/spectral_pbmc/controls/: Beads_AF647_IgM.fcs  Beads_AF700_CD4.fcs  Beads_APCCy7_CD19.fcs  Beads_BV605_CD14.fcs  Beads_BV650_CD56.fcs  Beads_BV711_CD11c.fcs  Beads_BV785_CD8a.fcs  Beads_FITC_CD41b.fcs  Beads_PB_CD3.fcs  Beads_PECy7_CD45RA.fcs  Beads_PE_X.fcs  Beads_unstained.fcs  Dead_PO_DCM.fcs  Dead_unstained.fcs  PBMC_unstained.fcs
scripts/: build_package.sh  make_differential_demo.py
