[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wakaflockaflow"
version = "0.1.1"
description = "No-code post-acquisition spectral flow cytometry analysis (population ID, cohorts, differential testing, gating paths)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Markus Sommer", email = "markus.sommer@aletira.bio" }]
keywords = ["flow-cytometry", "spectral", "flowsom", "umap", "immunophenotyping"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",
]

# Pure-Python stack (population ID, cohorts, gating paths, functional state,
# the scipy differential fallback, FlowJo export). Spectral unmixing and the
# diffcyt differential engine are R-based and only available via Docker/conda.
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "pydantic==2.10.4",
  "SQLAlchemy==2.0.36",
  "numpy==2.2.1",
  "scipy==1.15.0",
  "pandas==2.2.3",
  "pyarrow==18.1.0",
  "scikit-learn==1.6.0",
  "umap-learn==0.5.7",
  "flowkit==1.3.2",
  "anndata==0.10.9",
  "flowsom==0.2.2",
  "combat==0.3.3",
]

[project.urls]
Homepage = "https://github.com/Markusjsommer/WakaFlockaFlow"
Source = "https://github.com/Markusjsommer/WakaFlockaFlow"

[project.scripts]
wakaflockaflow = "wakaflockaflow.cli:main"

[tool.setuptools]
package-dir = { "wakaflockaflow" = "backend" }
packages = ["wakaflockaflow", "wakaflockaflow.analysis"]

[tool.setuptools.package-data]
wakaflockaflow = [
  "r_scripts/*.R",
  "webui/**/*",
  "sample_data/**/*",
]
